--- a/src/webparts/heroBanner/components/css/heroBanner.css
+++ b/src/webparts/heroBanner/components/css/heroBanner.css
@@ -6,8 +6,8 @@
 }
 .column_align_wrapper {
     display: flex;
-    padding-left: 5px !important;
-    padding-right: 5px !important;
+    padding-left: 2px !important;
+    padding-right: 2px !important;
 }
 .flex_row {
     display: flex;
@@ -23,7 +23,7 @@ background-repeat: no-repeat;
 position: relative;
 z-index: 9;
 width: 100%;
-min-height: 300px;
+min-height: 200px;
 }
 .hb_newsCtegory_01:before , .hb_newsCtegory_02:before , .hb_newsCtegory_03:before , .hb_newsCtegory_04:before , .hb_newsCtegory_05:before {
     content: "";
@@ -41,7 +41,7 @@ min-height: 300px;
     padding: 30px;
 }
 .hb_newsCtegory_02 , .hb_newsCtegory_03  {
-    margin-bottom: 10px;
+    margin-bottom: 4px;
 }
 .pdl {
 padding-left: 0px !important;
@@ -53,9 +53,9 @@ padding-left: 0px !important;
     color: #fff;
 }
 h3.hb_title_wrapper {
-    font-size: 16px;
+    font-size: 20px;
     text-transform: capitalize;
-    line-height: 26px;
+    /* line-height: 26px; */
 }
 .hb_content_wrapper {
     position: absolute;
