--- a/src/webparts/heroBanner/components/css/heroBanner.css
+++ b/src/webparts/heroBanner/components/css/heroBanner.css
@@ -1,31 +1,51 @@
 .desktop_hb_wrapper a {
     display: inline-block;
 }
-.desktop_hb_wrapper h1 , .desktop_hb_wrapper h2 , .desktop_hb_wrapper h3 , .desktop_hb_wrapper h4 , .desktop_hb_wrapper h5 , .desktop_hb_wrapper h6 , .desktop_hb_wrapper p {
+
+.desktop_hb_wrapper h1,
+.desktop_hb_wrapper h2,
+.desktop_hb_wrapper h3,
+.desktop_hb_wrapper h4,
+.desktop_hb_wrapper h5,
+.desktop_hb_wrapper h6,
+.desktop_hb_wrapper p {
     margin-bottom: 15px;
 }
+
 .column_align_wrapper {
     display: flex;
     padding-left: 2px !important;
     padding-right: 2px !important;
 }
+
 .flex_row {
     display: flex;
     flex-wrap: wrap;
 }
+
 .hb_newsCtegory_01 {
     width: 100%;
     padding: 30px;
 }
-.hb_newsCtegory_01 , .hb_newsCtegory_02 , .hb_newsCtegory_03 , .hb_newsCtegory_04 , .hb_newsCtegory_05 {
-background-size: cover;
-background-repeat: no-repeat;
-position: relative;
-z-index: 9;
-width: 100%;
-min-height: 200px;
+
+.hb_newsCtegory_01,
+.hb_newsCtegory_02,
+.hb_newsCtegory_03,
+.hb_newsCtegory_04,
+.hb_newsCtegory_05 {
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    z-index: 9;
+    width: 100%;
+    min-height: 200px;
 }
-.hb_newsCtegory_01:before , .hb_newsCtegory_02:before , .hb_newsCtegory_03:before , .hb_newsCtegory_04:before , .hb_newsCtegory_05:before {
+
+.hb_newsCtegory_01:before,
+.hb_newsCtegory_02:before,
+.hb_newsCtegory_03:before,
+.hb_newsCtegory_04:before,
+.hb_newsCtegory_05:before {
     content: "";
     position: absolute;
     background-color: rgb(0 0 0 / 60%);
@@ -37,26 +57,39 @@ min-height: 200px;
     bottom: 0;
     z-index: -1;
 }
-.hb_newsCtegory_02 , .hb_newsCtegory_03 , .hb_newsCtegory_04 , .hb_newsCtegory_05 {
+
+.hb_newsCtegory_02,
+.hb_newsCtegory_03,
+.hb_newsCtegory_04,
+.hb_newsCtegory_05 {
     padding: 30px;
 }
-.hb_newsCtegory_02 , .hb_newsCtegory_03  {
+
+.hb_newsCtegory_02,
+.hb_newsCtegory_03 {
     margin-bottom: 4px;
 }
+
 .pdl {
-padding-left: 0px !important;
+    padding-left: 0px !important;
 }
+
 .pdr {
     padding-right: 0px !important;
 }
-.hb_category_wrapper , .hb_title_wrapper , .hb_date_wrapper {
+
+.hb_category_wrapper,
+.hb_title_wrapper,
+.hb_date_wrapper {
     color: #fff;
 }
+
 h3.hb_title_wrapper {
     font-size: 20px;
     text-transform: capitalize;
     /* line-height: 26px; */
 }
+
 .hb_content_wrapper {
     position: absolute;
     left: 0px;
@@ -65,20 +98,26 @@ h3.hb_title_wrapper {
     max-width: 80%;
     margin: 0 auto;
 }
+
 h5.hb_date_wrapper {
     text-transform: capitalize;
     font-size: 14px;
 }
+
 .mobile_hb_wrapper .carousel-indicators {
     margin-bottom: -2rem;
     z-index: 9;
 }
+
 .mobile_hb_wrapper .carousel-indicators [data-bs-target] {
     background-color: #000;
 }
-.mobile_hb_wrapper .carousel-control-next, .mobile_hb_wrapper .carousel-control-prev {
+
+.mobile_hb_wrapper .carousel-control-next,
+.mobile_hb_wrapper .carousel-control-prev {
     z-index: 9;
 }
+
 .mobile_hb_wrapper {
     display: none;
 }
@@ -87,10 +126,12 @@ h5.hb_date_wrapper {
     .desktop_hb_wrapper {
         display: none;
     }
+
     .hb_newsCtegory_01 {
         min-height: 400px;
         display: block;
     }
+
     .mobile_hb_wrapper {
         display: block;
     }
